<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_test" />

        <Button
            android:id="@+id/nameTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_test2" />

        <Button
            android:id="@+id/test3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test3" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/main" />

        <EditText
            android:id="@+id/test_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/test3" />

        <EditText
            android:id="@+id/test_focus2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/btn_test2" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>